feat: Change database to mongodb and implementing datastore output ports